--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ img{
 }
 
 main{
-  width: 78%;
-  margin: 0 auto;
+  width: 90%;
+  margin: 5em auto 0 auto;
 }
 
 /* modal */
@@ -80,11 +80,13 @@ main{
   box-shadow: 0px 0px 6px 2px #666;
   background-color: #212529;
   color: whitesmoke;
+  
 }
 
 .modal-inner{
   max-width: 400px;
   padding: 1em;
+  
   margin: 0 auto;
 }
 
