--- a/style.css
+++ b/style.css
@@ -74,8 +74,8 @@ main{
   top: 0;
   bottom: 0;
   margin: auto;
-  width: 68%;
-  height: 600px;
+  width: 78%;
+  height: 750px;
   border-radius: 5px;
   box-shadow: 0px 0px 6px 2px #666;
   background-color: #212529;
@@ -84,9 +84,8 @@ main{
 }
 
 .modal-inner{
-  max-width: 400px;
+  max-width: 550px;
   padding: 1em;
-  
   margin: 0 auto;
 }
 
@@ -177,7 +176,10 @@ input{
 /*--media queries--*/
 
 @media(min-width: 600px) {
-
+  .modal {
+    width: 68%;
+   height: 600px;
+  }
   .modal-inner h2 {
     font-size: 2.35em;
   } 
